deploy: 3a0920d10525e66a8835213b0f582da25c1974fb

--- a/configuration/api-reference/secrets/index.html
+++ b/configuration/api-reference/secrets/index.html
@@ -1436,7 +1436,7 @@ nested structure can be accessed as well, returning the full structure as a JSON
 
 
 <h4 id="nyl.secrets.sops.SopsFile.do_not_use_in_prod_only_for_testing_sops_age_key" class="doc doc-heading">
-            <code class="highlight language-python"><span class="n">do_not_use_in_prod_only_for_testing_sops_age_key</span><span class="p">:</span> <span class="nb">str</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span></code>
+            <code class="highlight language-python"><span class="n">do_not_use_in_prod_only_for_testing_sops_age_key</span><span class="p">:</span> <span class="nb">str</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="nb">repr</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span></code>
 
   <span class="doc doc-labels">
       <small class="doc doc-label doc-label-class-attribute"><code>class-attribute</code></small>
