--- a/configuration/secrets/index.html
+++ b/configuration/secrets/index.html
@@ -1324,7 +1324,7 @@ hence it is <strong>not</strong> searched in a global configuration directory.</
 same repository to ensure that Nyl has access to it when it is invoked as an ArgoCD Config Management plugin. You also
 must have the <code>sops</code> program installed.</p>
 <p><strong>Example</strong></p>
-<div class="language-yaml highlight"><span class="filename">nyl-secrets.yaml</span><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1" href="#__codelineno-0-1"></a><span class="nt">provider</span><span class="p">:</span><span class="w"> </span><span class="l l-Scalar l-Scalar-Plain">sops</span>
+<div class="language-yaml highlight"><span class="filename">nyl-secrets.yaml</span><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1" href="#__codelineno-0-1"></a><span class="nt">type</span><span class="p">:</span><span class="w"> </span><span class="l l-Scalar l-Scalar-Plain">sops</span>
 </span><span id="__span-0-2"><a id="__codelineno-0-2" name="__codelineno-0-2" href="#__codelineno-0-2"></a><span class="nt">path</span><span class="p">:</span><span class="w"> </span><span class="l l-Scalar l-Scalar-Plain">../secrets.yaml</span>
 </span></code></pre></div>
 <p>The secrets will be decoded using the <code>sops</code> program, hence all the typical ways to configure Sops and how it decrypts
